--- a/style/index.css
+++ b/style/index.css
@@ -3,7 +3,7 @@ body {
 }
 
 .wrapper {
-  padding-top: 50px;
+  padding-top: 15px;
   font-family: "Sofia Sans Condensed", sans-serif;
   min-height: 100vh;
   padding-left: 40px;
@@ -19,7 +19,27 @@ body {
   width: 300px;
   margin: 0 auto;
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
+}
+
+.subtitle {
+  width: 300px;
+  margin: 15px auto;
+  text-align: center;
+}
+
+.nowType {
+  width: 300px;
+  margin: 15px auto;
+  text-align: center;
+  color: #fffa15;
+  text-decoration: underline;
+}
+
+.form_type {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
 }
 
 .form__firstblock {
