--- a/style/index.css
+++ b/style/index.css
@@ -40,6 +40,22 @@ body {
   display: flex;
   gap: 10px;
   justify-content: center;
+  align-items: center;
+}
+.form_type .button_type {
+  color: #090909;
+  padding: 0.2em 1.7em;
+  font-size: 18px;
+  border-radius: 0.5em;
+  background: #e8e8e8;
+  border: 1px solid #e8e8e8;
+  transition: all 0.1s;
+}
+.form_type .button_type:hover {
+  border: 1px solid white;
+}
+.form_type .button_type:active {
+  box-shadow: 4px 4px 12px #c5c5c5, -4px -4px 12px #ffffff;
 }
 
 .form__firstblock {
