--- a/index.scss
+++ b/index.scss
@@ -12,6 +12,13 @@ body {
   flex-wrap: wrap;
   justify-content: flex-start;
 }
+.logo{
+  background-image: url(../images/step.png);
+  width: 80px;
+  height: 80px;
+  background-size: contain;
+  position: absolute;
+}
 .title {
   width: 300px;
   margin: 0 auto;
