--- a/style/index.css
+++ b/style/index.css
@@ -15,6 +15,14 @@ body {
   justify-content: flex-start;
 }
 
+.logo {
+  background-image: url(../images/step.png);
+  width: 80px;
+  height: 80px;
+  background-size: contain;
+  position: absolute;
+}
+
 .title {
   width: 300px;
   margin: 0 auto;
