--- a/index.scss
+++ b/index.scss
@@ -18,6 +18,7 @@ body {
   height: 80px;
   background-size: contain;
   position: absolute;
+  background-repeat: no-repeat;
 }
 .title {
   width: 300px;
