--- a/index.scss
+++ b/index.scss
@@ -226,3 +226,17 @@ body {
   .btn:active {
     opacity: 0.5;
   }
+  .button-fix{
+    position: fixed;
+    right: 50px;
+    bottom: 40px;
+    h3{
+      margin: 0;
+    }
+
+  }
+  @media (max-width:830px) {
+    .button-fix{
+      position: static;
+    }
+  }
